// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`broken attribute description comments 1`] = `
"// https://www.terraform.io/docs/providers/google/r/description_escaping.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface DescriptionEscapingConfig extends cdktf.TerraformMetaArguments {
  /** The resource name of the Cloud KMS CryptoKey to be used to protect access 
 to messages published on this topic. Your project's PubSub service account 
 ('service-{{PROJECT_NUMBER}}@gcp-sa-pubsub.iam.gserviceaccount.com') must have 
 'roles/cloudkms.cryptoKeyEncrypterDecrypter' to use this feature. 
 The expected format is 'projects/*\\\\/locations/*\\\\/keyRings/*\\\\/cryptoKeys/*' */
  readonly brokenComments: cdktf.TerraformBoolean;
}

// Resource

export class DescriptionEscaping extends cdktf.TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: DescriptionEscapingConfig) {
    super(scope, id, {
      terraformResourceType: 'description_escaping',
      terraformGeneratorMetadata: {
        providerName: 'google'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this.putBrokenComments(config.brokenComments);
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // broken_comments - computed: false, optional: false, required: true
  private _brokenComments!: cdktf.TerraformBooleanAttribute;
  public get brokenComments() {
    return this._brokenComments;
  }
  public putBrokenComments(value: cdktf.TerraformBoolean) {
    this._brokenComments = cdktf.TerraformBooleanAttribute.construct(this, 'broken_comments', value);
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      broken_comments: this._brokenComments.toTerraform(),
    };
  }
}
"
`;

exports[`malformed code blocks which break in python rst 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/code_blocks.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface CodeBlocksConfig extends cdktf.TerraformMetaArguments {
  /** Here comes a code block \`\`\`foo.bar\`\`\` and here is more text. */
  readonly withCodeBlock: cdktf.TerraformBoolean;
}

// Resource

export class CodeBlocks extends cdktf.TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: CodeBlocksConfig) {
    super(scope, id, {
      terraformResourceType: 'code_blocks',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this.putWithCodeBlock(config.withCodeBlock);
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // with_code_block - computed: false, optional: false, required: true
  private _withCodeBlock!: cdktf.TerraformBooleanAttribute;
  public get withCodeBlock() {
    return this._withCodeBlock;
  }
  public putWithCodeBlock(value: cdktf.TerraformBoolean) {
    this._withCodeBlock = cdktf.TerraformBooleanAttribute.construct(this, 'with_code_block', value);
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      with_code_block: this._withCodeBlock.toTerraform(),
    };
  }
}
"
`;
